add the logo in the build

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,12 @@ http {
     listen 8080 default_server;
     listen [::]:8080 default_server;
 
-    server_name learnk8s.io;
+    server_name learnkube.com;
+
+    location = /learnk8s-logo.svg {
+        alias /usr/share/nginx/html/learnk8s-logo.svg;
+        add_header Content-Type image/svg+xml;
+    }
 
     location / {
         sub_filter_once off;
@@ -21,7 +26,7 @@ http {
         sub_filter "Daniele Polencic" "D5e";
         sub_filter "Daniele " "D5e ";
         sub_filter '<li class="ttu mh2">' '<li class="ttu mh2 bb bn-l b--white"><a href="https://chat.learnk8s.co" class="white link db b ph1 pv3 pv2-l f5 underline-hover" title="Chat">Chat</a></li><li class="ttu mh2 bb bn-l b--white"><a href="https://video.learnk8s.co" class="white link db b ph1 pv3 pv2-l f5 underline-hover" title="Video">Video</a></li><li class="ttu mh2 bb bn-l b--white"><a href="https://shop.learnk8s.co" class="white link db b ph1 pv3 pv2-l f5 underline-hover" title="Shop">Shop</a></li><li class="ttu mh2 bb bn-l b--white"><a href="https://party.learnk8s.co" class="white link db b ph1 pv3 pv2-l f5 underline-hover" title="Party">Party</a></li><li class="ttu mh2">';
-        sub_filter "</body>" '<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=true" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></body>';
+        sub_filter "</body>" '<style>.logo { background: url(/learnk8s-logo.svg) no-repeat; background-size: contain; } .logo svg{display:none;}</style><iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=true" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></body>';
         proxy_redirect     off;
         proxy_ssl_server_name on;
         proxy_set_header Host            learnk8s.io:443;
