new upstream domain name

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,8 @@ http {
         sub_filter " Kubernetes" " Koobernaytis";
         sub_filter ">Kubernetes" ">Koobernaytis";
         sub_filter "learnk8s.io" "learnk8s.co";
+        sub_filter "learnkube.com" "learnk8s.co";
+        sub_filter "LearnKube" "LearnK8s";
         sub_filter "ready" "bready";
         sub_filter "instructor-led" "Instructor-bled";
         sub_filter " Academy" " Badass Academy";
@@ -29,12 +31,11 @@ http {
         sub_filter "</body>" '<style>.logo { background: url(/learnk8s-logo.svg) no-repeat; background-size: contain; } .logo svg{display:none;}</style><iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=true" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></body>';
         proxy_redirect     off;
         proxy_ssl_server_name on;
-        proxy_set_header Host            learnk8s.io:443;
+        proxy_set_header Host            learnkube.com:443;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Accept-Encoding "";
         add_header X-Robots-Tag noindex;
-
-        proxy_pass https://learnk8s.io/;
+        proxy_pass https://learnkube.com/;
     }
   }
 }
